# sbcl-wrap

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE  Makefile  README.md  devenv.nix  flake.nix  sbcl-wrap.cabal  stack.yaml
.github/workflows/: ci.yml
src/: Main.hs
test/: run-tests.sh  smoke.lisp  with-libs.lisp
