name: sbcl-wrap
version: 0.0.6
cabal-version: >=1.2
build-type: Simple
license: MIT License
license-file: "LICENSE"
homepage: https://github.com/kisp/sbcl-wrap
synopsis: Wrapper around sbcl for fast script execution with (on demand compiled and cached) libraries.
description:  
data-dir: ""
 
executable sbcl-wrap
    build-depends: base, directory, unix, process, bytestring, cryptohash
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
